--- a/studybud/base/templates/base/home.html
+++ b/studybud/base/templates/base/home.html
@@ -2,18 +2,53 @@
 
 {% block content %}
 
-<h1>Home Template</h1>
+<style>
+    .home-container {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+</style>
 
 
-<div>
+<div class="home-container">
 
     <div>
-        {% for room in rooms %}
+        <h5>{{room_count}} rooms available</h5>
+        <h3>Browse Topics</h3>
+        <hr>
+
         <div>
-            <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
+            <a href="{% url 'home' %}">All</a>
         </div>
 
+        {% for topic in topics %}
+            <div>
+                <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+            </div>
         {% endfor %}
+    </div>
+
+    <div>
+
+        <a href="{% url 'create-room' %}">Create Room</a>
+
+        <div>
+            {% for room in rooms %}
+            <div>
+                {% if request.user == room.host %}
+                <a href="{% url 'update-room' room.id %}">Edit</a>
+                <a href="{% url 'delete-room' room.id %}">Delete</a>
+                {% endif %}
+
+                <span>@{{room.host.username}}</span>
+                <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
+                <small>{{room.topic.name}}</small>
+                <hr>
+            </div>
+    
+            {% endfor %}
+        </div>
+
     </div>
 
 </div>
