--- a/studybud/base/templates/base/login_register.html
+++ b/studybud/base/templates/base/login_register.html
@@ -18,7 +18,7 @@
               {% csrf_token %}
               <div class="form__group form__group">
                 <label for="room_name">Username</label>
-                <input id="username" name="username" type="text" placeholder="e.g. dennis_ivy" />
+                <input id="username" name="username" type="text" placeholder="e.g. username" />
               </div>
               <div class="form__group">
                 <label for="password">Password</label>
