--- a/studybud/base/templates/base/profile.html
+++ b/studybud/base/templates/base/profile.html
@@ -12,7 +12,6 @@
         <div class="profile">
           <div class="profile__avatar">
             <div class="avatar avatar--large active">
-              <img src="https://randomuser.me/api/portraits/men/11.jpg" />
             </div>
           </div>
           <div class="profile__info">
@@ -23,18 +22,12 @@
             {% endif %}
           </div>
           <div class="profile__about">
-            <h3>About</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo tenetur
-              facilis sunt nemo debitis quisquam hic atque aut? Ducimus alias placeat optio
-              accusamus repudiandae quis ab ex exercitationem rem?
-            </p>
           </div>
         </div>
 
         <div class="roomList__header">
           <div>
-            <h2>Study Rooms Hosted by dennis_ivy</a>
+            <h2>Study Rooms Hosted by {{user.username}}</a>
             </h2>
           </div>
         </div>
